--- a/Vacation_Package_Cost_Estimator/pom.xml
+++ b/Vacation_Package_Cost_Estimator/pom.xml
@@ -4,4 +4,30 @@
   <artifactId>Vacation_Package_Cost_Estimator</artifactId>
   <version>1.0.0</version>
   <name>taller01</name>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+		</plugins>
+	</build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration> <configLocation>JoseAlcivar_checks.xml</configLocation>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+
 </project>
+
