reports without errors

--- a/Vacation_Package_Cost_Estimator/target_before/classes/META-INF/maven/com.espol.edu/labcodeinspection/pom.xml
+++ b/Vacation_Package_Cost_Estimator/target_before/classes/META-INF/maven/com.espol.edu/labcodeinspection/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.espol.edu</groupId>
 	<artifactId>labcodeinspection</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Challenge Lab Code Inspection</name>
+	<name>Lab Code Inspection</name>
 	<description>Software Engineering II</description>
 	
 	<build>
